force-app/main/default/objects/cpm__Recurring_Payment__c/fields/Collections_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Collections_Per_Year__c</fullName>
    <formula>CASE( cpm__Frequency__c , &apos;Monthly&apos;, 12, &apos;Annual&apos;, 1, &apos;Quarterly&apos;, 4, &apos;Twice a Year&apos;, 2, &apos;One-time&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collections Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>