force-app/main/default/objects/cpm__Recurring_Payment__c/fields/Expected_Number_of_Collections__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Collections__c</fullName>
    <formula>CEILING((( cpm__End_Date__c -  cpm__Start_Date__c )/365)* Collections_Per_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Number of Collections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>