force-app/main/default/objects/cpm__Recurring_Payment__c/fields/Expected_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Amount__c</fullName>
    <formula>Expected_Number_of_Collections__c  *  cpm__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>