force-app/main/default/objects/cpm__Recurring_Payment__c/fields/Number_of_Collections_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Collections_Remaining__c</fullName>
    <formula>if( cpm__Active__c = true, CEILING(( cpm__End_Date__c -  cpm__Next_Collection_Date__c )/365)* Collections_Per_Year__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Collections Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>