force-app/main/default/objects/cpm__Recurring_Payment__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>Zumzum__Sales_Invoice__c</referenceTo>
    <relationshipLabel>Recurring Payments</relationshipLabel>
    <relationshipName>Recurring_Payments_del</relationshipName>
    <type>Lookup</type>
</CustomField>