force-app/main/default/objects/cpm__Recurring_Payment__c/fields/Total_Amout_Not_Yet_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amout_Not_Yet_Collected__c</fullName>
    <formula>Number_of_Collections_Remaining__c *  cpm__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amout Not Yet Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>